@@ -26,8 +26,8 @@ $moduleDirNameUpper = mb_strtoupper($moduleDirName);
 // ------------------- Informations ------------------- //
 $modversion = [
     'version'             => '1.14',
-    'module_status'       => 'RC1',
-    'release_date'        => '2019/11/01',
+    'module_status'       => 'final',
+    'release_date'        => '2020/07/01',
     'name'                => _MI_WGGALLERY_NAME,
     'description'         => _MI_WGGALLERY_DESC,
     'author'              => 'Wedega',
@@ -42,7 +42,7 @@ $modversion = [
     'release_file'        => XOOPS_URL . '/modules/wggallery/docs/release_info file',
     'manual'              => 'link to manual file',
     'manual_file'         => XOOPS_URL . '/modules/wggallery/docs/install.txt',
-    'min_php'             => '7.0',
+    'min_php'             => '7.2',
     'min_xoops'           => '2.5.10',
     'min_admin'           => '1.1',
     'min_db'              => ['mysql' => '5.5'],
@@ -56,7 +56,7 @@ $modversion = [
     'support_name'        => 'Wedega - Webdesign Gabor',
     'module_website_url'  => 'https://xoops.wedega.com',
     'module_website_name' => 'Wedega XOOPS Demo Site',
-    'release'             => '01/11/2019',
+    'release'             => '01/07/2020',
     'system_menu'         => 1,
     'hasAdmin'            => 1,
     'hasMain'             => 1,
