@@ -1,3 +1,7 @@
+<h5>1.14 Final</h5>  [2020/07/01]
+<hr>
+ - moved to final (goffy)
+ 
 <h5>1.14 RC2</h5>  [2019/12/23]
 <hr>
  - fixed missing check of allowed resolution (goffy)
